--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -98,6 +98,7 @@ img{
 @import "partials/chiefs-section.scss";
 @import "partials/previous-searches.scss";
 @import "partials/recipes-section.scss";
+@import "partials/admin.scss";
 
 
 .options-container{
