--- a/src/styles/partials/_admin.scss
+++ b/src/styles/partials/_admin.scss
@@ -45,10 +45,18 @@ h1 {
 }
 
 .dashboard-container {
+    min-height: 60vh;
+    padding: 20px 0;
+
+    h1 {
+        margin: 15px 0 20px 0;
+    }
+
     .actions {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 20px;
+        align-items: center;
+        margin: 40px 0;
     }
 
     .add-recipe {
@@ -60,10 +68,20 @@ h1 {
         border-radius: 5px;
     }
 
+    .search-recipes {
+        width: 50%;
+        padding: 8px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        margin-left: 10px;
+    }
+
     .filter-recipes {
         padding: 8px 10px;
         border-radius: 5px;
-        border: 1px solid #ccc;
+        border: 1px solid rgb(219, 219, 219);
+        margin-left: 10px;
+        background-color: lightblue;
     }
 
     .recipes-table {
@@ -85,7 +103,6 @@ h1 {
             }
             &:nth-child(2) { // Ingredientes
                 width: auto; // Ajusta según el espacio disponible
-                background-color: #2196F3;
                 -webkit-box-orient: vertical;
                 -webkit-line-clamp: 2;
                 overflow: hidden;
@@ -118,6 +135,23 @@ h1 {
         }
         .view-btn {
             color: #2196F3;
+        }
+    }
+
+    .pagination {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        .page-item {
+            margin: 0 5px;
+            padding: 5px 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+            &.active {
+                background-color: #4CAF50;
+                color: white;
+            }
         }
     }
 }
