--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -99,6 +99,7 @@ img{
 @import "partials/previous-searches.scss";
 @import "partials/recipes-section.scss";
 @import "partials/admin.scss";
+@import "partials/modal.scss";
 
 
 .options-container{
