--- a/src/styles/partials/_chiefs-section.scss
+++ b/src/styles/partials/_chiefs-section.scss
@@ -37,17 +37,17 @@
             color: var(--text-light);
         }
         .cheif-icons{
-            font-size: 1.2em;
-            svg{
+            font-size: 1.5em;
+            a {
                 margin-right: .5em;
                 &:nth-child(1){
-                    color: #0063f7;
+                    color: #ff0056;
                 }
                 &:nth-child(2){
-                    color: #13b4ff;
+                    color: black;
                 }
                 &:nth-child(3){
-                    color: #ff0056;
+                    color: #13b4ff;
                 }
             }
         }
