--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -16,5 +16,9 @@
             font-weight: bold;
             margin-bottom: 1em;
         }
+        a {
+            text-decoration: none;
+            color: white;
+        }
     }
 }
