--- a/src/styles/partials/_recipes-section.scss
+++ b/src/styles/partials/_recipes-section.scss
@@ -32,6 +32,13 @@
         color: var(--text-color);
         margin-top: .25em;
     }
+    .recipe-category{
+        color: var(--text-light);
+        font-size: .9em;
+        font-style: italic;
+        letter-spacing: 1px;
+        margin-bottom: .5em;
+    }
     .recipe-desc{
         color: var(--text-light);
         font-size: .9em;
