--- a/src/styles/partials/_modal.scss
+++ b/src/styles/partials/_modal.scss
@@ -25,6 +25,13 @@
   max-width: 800px;
   width: 90%;
   position: relative;
+  h3 {
+    margin-bottom: .5em;
+  }
+  p {
+    margin-bottom: 1em;
+    margin-left: .5em;
+  }
 }
 
 .close-btn {
