--- a/src/styles/partials/_previous-searches.scss
+++ b/src/styles/partials/_previous-searches.scss
@@ -1,42 +1,74 @@
-.previous-searches{
-    display: block;
-    h2{
-        color: var(--text-color);
-        margin-bottom: .5em;
+.previous-searches {
+  display: block;
+  h2 {
+    color: var(--text-color);
+    margin-bottom: 0.5em;
+  }
+  .previous-searches-container {
+    .search-item {
+      background-color: var(--primary-color);
+      display: inline-block;
+      padding: 0.5em 1em;
+      margin: 0 1em 1em 0;
+      color: #fff;
+      border-radius: 30px;
+      box-shadow: 0 3px 6px var(--shadow-color);
+      transform: translateX(100%);
+      opacity: 0;
+      animation: getAnimationDuration(0.5s) slideInRight forwards;
     }
-    .previous-searches-container{
-        .search-item{
-            background-color: var(--primary-color);
-            display: inline-block;
-            padding: .5em 1em;
-            margin: 0 1em 1em 0;
-            color: #fff;
-            border-radius: 30px;
-            box-shadow: 0 3px 6px var(--shadow-color);
-            transform: translateX(100%);
-            opacity: 0;
-            animation: getAnimationDuration(.5s) slideInRight forwards;
-        }
+  }
+  .search-box {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 1em 0;
+    height: 35px;
+
+    input,
+    .btn {
+      height: 35px;
     }
-    .search-box{
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        height: 35px;
-        input, .btn{
-            height: 35px;
-        }
-        input{
-            min-width: 250px;
-            padding: 0 .5em;
-            border-radius: 5px 0 0 5px;
-            outline: none;
-            border: 1px solid #4d4d4d;
-        }
-        .btn{
-            padding-block: 0;
-            padding-inline: .75em;
-            border-radius: 0 5px 5px 0;
-        }
+    input {
+      min-width: 250px;
+      padding: 0 0.5em;
+      border-radius: 5px 0 0 5px;
+      outline: none;
+      border: 1px solid #4d4d4d;
     }
+    .btn {
+      padding-block: 0;
+      padding-inline: 0.75em;
+      border-radius: 0 5px 5px 0;
+    }
+  }
+
+  /* Estilo para botones especiales como 'Receta Aleatoria' */
+  .random-btn,
+  .sort-recipes {
+    background-color: var(--primary-color);
+    border-radius: 20px;
+    padding: 8px 15px;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  .random-btn {
+    font-size: 0.8em;
+  }
+
+  .random-btn:hover,
+  .sort-recipes:hover {
+    background-color: var(--primary-color);
+  }
+
+  .sort-recipes {
+    font-weight: bolder;
+    border: none;
+    outline: none;
+    background-color: var(--primary-color);
+    margin: 0 10px 0 0;
+    cursor: pointer;
+  }
 }
