--- a/src/styles/partials/_recipes-section.scss
+++ b/src/styles/partials/_recipes-section.scss
@@ -1,4 +1,5 @@
 .recipes-container{
+    padding: 30px 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     grid-gap: 1.5em;
@@ -62,5 +63,22 @@
     span {
         font-weight: bold;
         font-size: 1.5em;
+    }
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+    .page-item {
+        margin: 0 5px;
+        padding: 5px 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+        &.active {
+            background-color: #4CAF50;
+            color: white;
+        }
     }
 }
