feat: i've added validation and secure method to login

--- a/src/styles/partials/_admin.scss
+++ b/src/styles/partials/_admin.scss
@@ -67,6 +67,14 @@ h1 {
         cursor: pointer;
         border-radius: 5px;
     }
+    .logout {
+        padding: 10px 15px;
+        background-color: #af4c4c;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+    }
 
     .search-recipes {
         width: 50%;
